--- a/Notebook/CV_models_and_algorithms__tutorial.ipynb
+++ b/Notebook/CV_models_and_algorithms__tutorial.ipynb
@@ -2093,6 +2093,20 @@
         "# Calling Generate Preview Video from Extractor Object\n",
         "ext.generate_preview_video()"
       ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### End"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     }
   ],
   "metadata": {
